fix text-align to left  on /blog for small screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -103,6 +103,7 @@ aside {
         text-align: justify;
         @media (max-width: 650px) {
             padding: 0;
+            text-align: left;
         }
     }
 }
